--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
@@ -28,7 +29,10 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.1.0",
     "prettier": "3.3.1",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
     "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.6.0"
   }
 }
