--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "vite": "^5.2.0",
     "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.6.0"
+  },
+  "engines": {
+    "node": "20.14.0"
   }
 }
